--- a/ConstructionApp.Frontend/src/app/technician/verify/technician-verify-doc.component.html
+++ b/ConstructionApp.Frontend/src/app/technician/verify/technician-verify-doc.component.html
@@ -76,7 +76,7 @@
         </label>
         <input id="certInput" type="file" accept="application/pdf" (change)="onFileSelect($event, 'certificate')" />
         <div class="file-name" *ngIf="certFileName">{{ certFileName }}</div>
-        <div class="file-note" *ngIf="!certFileName">All certificates in ONE PDF • Max 5MB</div>
+        <div class="file-note" *ngIf="!certFileName">All certificates in one PDF • Max 5MB</div>
       </div>
 
       <!-- ================= STATUS MESSAGE ================= -->
